# logic-synthesis

./: .gitignore  .project  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  LEGGIMI  Makefile  Makefile.am  Makefile.in  PKGBUILD  README  README.md  TODO.md  aclocal.m4  balm.html  basic-gates.html  config.cache  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.in  configure.lineno  espresso.html  f.aut  f.ps  f1.aut  f1.ps  full-adder.html  index.html  mvsis.html  navbar-tutorials.html  navbar.html  planet.mv  (+18 more)
espresso/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cofactor.c  cols.c  compl.c  contain.c  cubestr.c  cvrin.c  cvrm.c  cvrmisc.c  cvrout.c  dominate.c  equiv.c  espresso  espresso.1  espresso.5  espresso.c  espresso.h  essen.c  exact.c  expand.c  gasp.c  getopt.c  gimpel.c  globals.c  hack.c  indep.c  irred.c  main.c  main.h  map.c  matrix.c  mincov.c  mincov.h  mincov_int.h  opo.c  pair.c  part.c  (+14 more)
espresso/examples/: Makefile  Makefile.am  Makefile.in  a2.pair  fsm.pla
jedi/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cluster.c  expand.c  getopt.c  hill.c  hot.c  jedi  jedi.1  jedi.c  jedi.h  jedi_int.h  options.c  random.c  read.c  rp.c  rp.h  util.c  util.h  weights.c  write.c
jedi/inc/: jedi_int.h  rp.h  rp_int.h  util.h
nova/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  alloc.c  analisi.h  anneal_code.c  auxil.c  coloring.c  comb_objects.c  decls.h  exact_backtrack.c  exact_code.c  exact_graph.c  exact_lbound.c  exact_mini.c  exact_output.c  get_constr.c  ihybrid_code.c  input_fsm.c  iohybrid_code.c  iovariant_code.c  log_approx.c  log_code.c  log_mini.c  log_output.c  log_precode.c  log_sel.c  lower_bound.c  nova.1  nova.c  nova.h  nova_summ.c  oldport.h  options.c  out_encoder.c  out_encoder.h  out_eval.c  show.c  symbolic_loop.c  (+1 more)
nova/inc/: analisi.h  decls.h  oldport.h  out_encoder.h
options/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  dfltoptions.c  dflttap.c  options-test.c  options-test.usage  options.3  options.c  options.doc.src  options.h
sis/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
sis/array/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  arr_main.c  array.c  array.doc  array.h  array.txt
sis/astg/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  astg.doc  astg.h  astg.txt  astg_blif.c  astg_cmds.c  astg_contract.c  astg_core.h  astg_core1.c  astg_core2.c  astg_flow.c  astg_int.h  astg_irred.c  astg_lkgraph.c  astg_marking.c  astg_persist.c  astg_read.c  astg_reduce.c  bwd_code.c  bwd_com.c  bwd_hazard.c  bwd_int.h  bwd_io.c  bwd_lp.c  bwd_min_delay.c  bwd_slow.c  bwd_stg_to_f.c  bwd_util.c  com_astg.c  min_delay_int.h  si_com.c  si_encode.c  si_int.h  si_min.c
sis/atpg/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  atpg.doc  atpg.h  atpg.txt  atpg_clauses.c  atpg_comb.c  atpg_faults.c  atpg_faultsim.c  atpg_gen_test.c  atpg_init.c  atpg_int.h  atpg_seq.c  atpg_seq_util.c  atpg_util.c  com_atpg.c  com_redund.c  com_short_t.c  fast_avl.c  fast_avl.h  sat.c  sat.h  sat_int.h
sis/avl/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  avl.c  avl.h  avl.txt  avl_bench1.c
sis/bdd_cmu/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bdd.h
sis/bdd_cudd/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
sis/bdd_ucb/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  adhoc_cache.c  and_smooth.c  assert_frame.c  assert_heap.c  bdd.doc  bdd.h  bdd.txt  bdd_cofactor.c  bdd_compose.c  bdd_cproject.c  bdd_end.c  bdd_int.h  bdd_ite.c  bdd_iter.c  bdd_min_sibl.c  bdd_min_util.c  bdd_print.c  bdd_quantify.c  bdd_start.c  bdd_substit.c  bdd_support.c  bdd_tovar.c  bdd_util.c  boolean_ops.c  config.c  const_cache.c  dmp_ext_ptrs.c  dmp_mgr_stat.c  dmp_node_age.c  external_ptr.c  find_or_add.c  garb_collect.c  hash_cache.c  ite.c  ite_common.c  ite_constant.c  (+3 more)
sis/clock/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  clock.c  clock.doc  clock.h  clock.txt  clock_util.c  com_clock.c
sis/command/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  addcom.c  alias.c  cmd_set.c  com_int.h  command.c  command.doc  command.h  command.txt  commisc.c  filec.c  get_nodes.c  get_true_po.c  help.c  open_file.c  source.c  undo.c
sis/decomp/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  com_dec.c  dec_alg.c  dec_sm.c  dec_tech.c  dec_util.c  decomp.c  decomp.doc  decomp.h  decomp.txt  decomp_int.h  disj.c  partition.c
sis/delay/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  com_delay.c  delay.c  delay.doc  delay.h  delay.txt  delay_int.h  mapdelay.c  tdc_delay.c  tdc_int.h
sis/doc/: Makefile  Makefile.am  Makefile.in  PROG  README  SPEC  blif.aux  blif.dvi  blif.ps  blif.tex  slif.5
sis/enc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  com_enc.c  dic.c  dic_to_sm.c  enc.h  enc.txt  enc_int.h  gen_eqn.c  input.c  interface.c
sis/error/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  error.c  error.doc  error.h  error.txt
sis/espresso/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cofactor.c  compl.c  contain.c  cubestr.c  cvrin.c  cvrm.c  cvrmisc.c  cvrout.c  equiv.c  espresso.c  espresso.h  essen.c  exact.c  expand.c  gasp.c  globals.c  (+14 more)
sred/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  action.c  boolcmp.c  chinclus.c  chiusura.c  choose.c  clinchain.c  clinclus.c  clincop.c  closure.c  coloring.c  comp.c  connected.c  esp_color.c  exist.c  existdf.c  generate.c  gram.c  gram.h  gram.y  ibincompa.c  incompat.c  iobincomp.c  label.c  lex.c  lex.l  main.c  makeout.c  misc.c  mxcomptbl.c  newnstate.c  newoutput.c  newprime.c  obincompa.c  prime.c  primeones.c  procargs.c  (+9 more)
utility/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cpu_time.c  csystem.c  pathsearch.c  pipefork.c  prtime.c  strsav.c  texpand.c  tmpfile.c  utility.doc  utility.h  utility.txt  uttest.c
xsis/: Makefile.am  Makefile.in  NetPlot.c  NetPlot.h  NetPlotP.h  blif50.px  fakesis.c  ghost.px  help50.px  main.c  sis50.px  xastg.c  xblif.c  xcmd.c  xhelp.c  xsis.1  xsis.c  xsis.h  xutil.c
(+2726 files in other folders)
