project(espresso)

add_executable(espresso
        cofactor.c
        cols.c
        compl.c
        contain.c
        cubestr.c
        cvrin.c
        cvrm.c
        cvrmisc.c
        cvrout.c
        dominate.c
        equiv.c
        espresso.c
        inc/espresso.h
        essen.c
        exact.c
        expand.c
        gasp.c
        getopt.c
        gimpel.c
        globals.c
        hack.c
        indep.c
        irred.c
        main.c
        inc/main.h
        map.c
        matrix.c
        mincov.c
        inc/mincov.h
        inc/mincov_int.h
        opo.c
        pair.c
        part.c
        primes.c
        reduce.c
        rows.c
        set.c
        setc.c
        sharp.c
        sminterf.c
        solution.c
        sparse.c
        inc/sparse.h
        inc/sparse_int.h
        unate.c
        verify.c
        )
target_link_libraries(espresso utility)