cmake_minimum_required(VERSION 3.8)
project(sis)
set(CMAKE_CXX_STANDARD 11)

add_subdirectory(array)
add_subdirectory(astg)
add_subdirectory(atpg)
add_subdirectory(avl)
add_subdirectory(bdd_cmu)
add_subdirectory(bdd_ucb)
add_subdirectory(clock)
add_subdirectory(command)
add_subdirectory(decomp)
add_subdirectory(delay)
add_subdirectory(enc)
add_subdirectory(error)
add_subdirectory(espresso)
add_subdirectory(extract)
add_subdirectory(factor)
add_subdirectory(gcd)
add_subdirectory(genlib)
add_subdirectory(graph)
add_subdirectory(graphics)
add_subdirectory(io)
add_subdirectory(latch)
add_subdirectory(linsolv)
add_subdirectory(list)
add_subdirectory(main)
add_subdirectory(map)
add_subdirectory(maxflow)
add_subdirectory(mincov)
add_subdirectory(minimize)
add_subdirectory(network)
add_subdirectory(node)
add_subdirectory(ntbdd)
add_subdirectory(octio)
add_subdirectory(order)
add_subdirectory(phase)
add_subdirectory(pld)
add_subdirectory(power)
add_subdirectory(resub)
add_subdirectory(retime)
add_subdirectory(seqbdd)
add_subdirectory(sim)
add_subdirectory(simplify)
add_subdirectory(sparse)
add_subdirectory(speed)
add_subdirectory(st)
add_subdirectory(stg)
add_subdirectory(test)
add_subdirectory(timing)
add_subdirectory(util)
add_subdirectory(var_set)# Generating the library libsis.a
set(project "sis")

set(${project}, "")
list(APPEND ${project}_SOURCES

        )
add_library(libsis STATIC ${${project}_SOURCES})
# Generating the library sis
set(project "sis")

set(${project}, "")
list(APPEND ${project}_SOURCES
        )
add_executable(sis ${${project}_SOURCES})

target_link_libraries(sis
        m
        )