project(sis)

include_directories(include)

add_subdirectory(array)
add_subdirectory(astg)
add_subdirectory(atpg)
add_subdirectory(avl)
add_subdirectory(bdd_cmu)
add_subdirectory(bdd_ucb)
add_subdirectory(clock)
add_subdirectory(command)
add_subdirectory(decomp)
add_subdirectory(delay)
add_subdirectory(enc)
add_subdirectory(error)
add_subdirectory(espresso)
add_subdirectory(extract)
add_subdirectory(factor)
add_subdirectory(gcd)
add_subdirectory(genlib)
add_subdirectory(graph)
add_subdirectory(graphics)
add_subdirectory(io)
add_subdirectory(linsolv)
add_subdirectory(list)
add_subdirectory(main)
add_subdirectory(map)
add_subdirectory(maxflow)
add_subdirectory(mincov)
add_subdirectory(minimize)
add_subdirectory(network)
add_subdirectory(node)
add_subdirectory(ntbdd)
add_subdirectory(octio)
add_subdirectory(order)
add_subdirectory(phase)
add_subdirectory(pld)
add_subdirectory(power)
add_subdirectory(resub)
add_subdirectory(retime)
add_subdirectory(seqbdd)
add_subdirectory(sim)
add_subdirectory(simplify)
add_subdirectory(sparse)
add_subdirectory(speed)
add_subdirectory(st)
add_subdirectory(stg)
add_subdirectory(test)
add_subdirectory(timing)
add_subdirectory(util)
add_subdirectory(var_set)
add_subdirectory(include/latch)

add_executable(sis main/sis.c)
target_link_libraries(sis
        array
        astg
        atpg
        avl
        bdd_cmu
        bdd_ucb
        clock
        command
        decomp
        delay
        enc
        error
        espresso_sis
        extract
        factor
        gcd
        genlib
        graph
        graphics
        io
        linsolv
        list
        main
        map
        maxflow
        mincov
        minimize
        network
        node
        ntbdd
        octio
        order
        phase
        pld
        power
        resub
        retime
        seqbdd
        sim
        simplify
        sparse
        speed
        st
        stg
        test
        timing
        util
        var_set)
